service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olympic-medals-app
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: olympic-medals-app
