route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: olympic-medals-app
spec:
  to:
    kind: Service
    name: olympic-medals-app
  port:
    targetPort: 80
  tls:
    termination: edge
